[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Items/ExplodingBlock.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Ducks/ExplodingDuck.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Items/ExplodingBlock.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 12 )

[sub_resource type="Animation" id=5]
resource_name = "boom"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "detonate"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[node name="ExplodingDuck" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -17 )
texture = ExtResource( 1 )
hframes = 16
frame = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -26 )
shape = SubResource( 2 )

[node name="ExplodingBlock" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/boom = SubResource( 5 )
anims/detonate = SubResource( 3 )
anims/idle = SubResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
